Added posibility to create card with image from file
